crates/contracts/src/runtime/events/snapshots/everruns_contracts__runtime__events__contract_tests__event_data_act_started.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "tool_calls": [
    {
      "id": "tc_1",
      "name": "get_weather"
    }
  ]
}
