crates/contracts/src/runtime/events/snapshots/everruns_contracts__runtime__events__contract_tests__event_data_input_message.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "message": {
    "id": "[MESSAGE_ID]",
    "role": "user",
    "content": [
      {
        "type": "text",
        "text": "Hello, world!"
      }
    ],
    "created_at": "[TIMESTAMP]"
  }
}
