crates/contracts/src/runtime/events/snapshots/everruns_contracts__runtime__events__contract_tests__event_data_reason_completed.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "success": true,
  "text_preview": "Hello world",
  "has_tool_calls": true,
  "tool_call_count": 2,
  "duration_ms": 1000,
  "usage": {
    "input_tokens": 100,
    "output_tokens": 50
  }
}
