crates/contracts/src/runtime/events/snapshots/everruns_contracts__runtime__events__contract_tests__event_data_reason_item.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "provider": "openai",
  "model": "gpt-5.5",
  "item_id": "rs_test",
  "summary": [
    "safe summary"
  ],
  "token_count": 42
}
