crates/contracts/src/runtime/events/snapshots/everruns_contracts__runtime__events__contract_tests__event_data_reason_thinking_delta.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "delta": "Let me think...",
  "accumulated": "First thought. Let me think..."
}
