crates/contracts/src/runtime/events/snapshots/everruns_contracts__runtime__events__contract_tests__event_data_reason_thinking_started.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "model": "claude-4-opus"
}
