crates/contracts/src/runtime/events/snapshots/everruns_contracts__runtime__events__contract_tests__event_data_session_activated.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "input_message_id": "message_00000000000000000000000000000003"
}
