crates/contracts/src/runtime/events/snapshots/everruns_contracts__runtime__events__contract_tests__event_data_turn_completed.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "iterations": 3,
  "duration_ms": 1500,
  "usage": {
    "input_tokens": 100,
    "output_tokens": 50
  },
  "final_message_id": "message_00000000000000000000000000000003",
  "final_answer_preview": "Done.",
  "time_to_first_token_ms": 120,
  "tool_call_count": 2,
  "llm_call_count": 3,
  "status": "completed"
}
