crates/contracts/src/runtime/events/snapshots/everruns_contracts__runtime__events__contract_tests__event_data_turn_failed.snap
---
source: crates/core/src/events.rs
expression: data
---
{
  "turn_id": "turn_00000000000000000000000000000002",
  "error": "Rate limit exceeded",
  "error_code": "RATE_LIMIT"
}
